deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdss-back-deployment
  namespace: pdss-namespace-back
spec:
  selector:
    matchLabels:
      app: pdss-back
  replicas: 3
  template:
    metadata:
      labels:
        app: pdss-back
    spec:
      containers:
      - name: pdss-back
        image: rochdi.azurecr.io/pdss-back:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 300m
            memory: "100Mi"
          requests:
            cpu: 100m
            memory: "50Mi"
