scv-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdss-front
  namespace: app
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: pdss-front
  type: ClusterIP #LoadBalancer
