svc-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdss-back-service
  namespace: pdss-namespace-back
spec:
  selector:
    app: pdss-back
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP #NodePort
