ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdss-front-ingress
  namespace: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test.mobelite.fr
      secretName: test-tls
  rules:
    - host: test.mobelite.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdss-front
                port:
                  number: 80
